Tests/CompilerTests/negative/ambiguous-literal.diagnostics.expected
negative/ambiguous-literal.hylo:49.12-13: error: ambiguous type for literal expression
  let r = (1 + 1) as Target
           ^
